--- a/project2.css
+++ b/project2.css
@@ -22,3 +22,46 @@ img{
 .container{
     margin-top: 5px;
 }
+
+.full{
+    width: 50%;
+    max-width: 1000px;
+    min-height: 100px;
+    background-color: rgb(245, 239, 231);
+    margin: 0px;
+    display: grid;
+    grid-template-columns: 2fr 4fr;
+}
+
+.cv{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.body_cv{
+    background-color: rgb(253, 239, 255);
+    justify-content: center;
+    align-items: center;
+    color:darkslategray;
+}
+
+.left{
+    position: initial;
+    background-color: rgb(162, 219, 231);
+    padding: 20px;
+}
+
+.right{
+    position: initial;
+    background-color: rgb(162, 202, 206);
+    padding: 20px;
+}
+
+.Contact .Skills .Language .Hobbies .title, .Summary, .Expierience, .Education, .project {
+    margin-bottom: 30px;
+} 
+
+.foto_cv{
+    margin-top: 70px;
+}
